package list;

public interface Elemento {
    boolean esIgual(Elemento elemento);
    int compararCon(Elemento elemento);
}
